organização das rotas para o swagger
